# claude-proxy

./: .env.example  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  config.example.toml  deny.toml
.github/workflows/: ci.yml
examples/: basic_proxy.rs  translate_only.rs
scripts/: claude-proxy.sh
src/: config.rs  error.rs  lib.rs  logging.rs  main.rs  models.rs  providers.rs  proxy.rs  server.rs
src/translate/: anthropic_types.rs  mod.rs  openai_types.rs  request.rs  response.rs  streaming.rs
tests/: integration_test.rs
